# Chess

./: .gitignore  CMakeLists.txt  chess.sln  main.cpp  readme.md
chess/: CMakeLists.txt  chess.vcxproj  chess.vcxproj.filters  main.cpp
chess/core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Entry.cpp  Entry.h  ManagerChessBoard.cpp  ManagerChessBoard.h  Piece.cpp  Piece.h  Strategy.cpp  Strategy.h
chess/resources/: resources.qrc  startWindow.qss  style.qss
chess/ui/: BaseWindow.cpp  BaseWindow.h  ChessBoard.cpp  ChessBoard.h  Component.h  PieceWidget.cpp  PieceWidget.h  SideBar.cpp  SideBar.h  SplashScreen.h  StartUpWindow.cpp  StartUpWindow.h  Ui_Splashscreen.h
core/: Chessboard.cpp  Chessboard.h  Choose.cpp  Choose.h  Mainwindow.cpp  Mainwindow.h  Splashscreen.cpp  Splashscreen.h
ui/: Chessboard.ui  Splashscreen.ui  Ui_Chessboard.h  Ui_Mainwindow.h  Ui_Splashscreen.h
